--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<p>id:{{virada.id}} index:{{virada.index}} pontos:{{pontos}} action:{{action}} movimentos:{{movimentos}} </p>
+<!-- <p>id:{{virada.id}} index:{{virada.index}} pontos:{{pontos}} action:{{action}} movimentos:{{movimentos}} </p> -->
 
 <section class="container">
 
